[package]
name = "anshin-meshi"
version = "0.1.0"
authors = ["st-little <https://github.com/st-little>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenvy = "0.15.7"

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.3", features = ["json"] }
async-recursion = "1.1.0"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.82"
dioxus-free-icons = { version = "0.8", features = ["ionicons"] }